--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "joi": "^17.11.0",
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
-    "typescript": "^5.3.3",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
