--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
-    "test": " ENVIRONMENT=test jest --detectOpenHandles --runInBand"
+    "test": " NODE_ENV=test jest  --runInBand",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
