--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express-async-handler": "^1.2.0",
     "joi": "^17.11.0",
     "mysql2": "^3.6.5",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
@@ -28,6 +30,8 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
     "@types/supertest": "^2.0.16",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
