--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - NODE_ENV=production
       - DB_HOST=mysql
       - DB_USER=root
-      - DB_PASS=my-secret-pw
+      - DB_PASS=F{22QjkeBt0Jhu&6j9u-nwXFY8L5Hf
       - DB_NAME=pokemon_docker
       - PORT=8080
     depends_on:
@@ -21,12 +21,12 @@ services:
     ports:
       - "9999:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=my-secret-pw
+      - MYSQL_ROOT_PASSWORD=F{22QjkeBt0Jhu&6j9u-nwXFY8L5Hf
       - MYSQL_DATABASE=pokemon_docker
     volumes:
       - mysql-data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "-uroot", "-pmy-secret-pw", "ping"]
+      test: ["CMD", "mysqladmin", "-uroot", "-pF{22QjkeBt0Jhu&6j9u-nwXFY8L5Hf", "ping"]
       interval: 30s
       timeout: 10s
       retries: 5
