--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -6,13 +6,8 @@ services:
       dockerfile: Dockerfile.test
     ports:
       - "8080:8080"
-    environment:
-      - NODE_ENV=test
-      - DB_HOST=db_test
-      - DB_USER=root
-      - DB_PASS=vupX{1UN(:j98$,CY=EV9BD=kqQ1
-      - DB_NAME=pokemon_test_db
-      - PORT=8080
+    env_file:
+      - .env.test
     depends_on:
       db_test:
         condition: service_healthy
@@ -23,10 +18,10 @@ services:
     ports:
       - "9999:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=vupX{1UN(:j98$,CY=EV9BD=kqQ1
+      - MYSQL_ROOT_PASSWORD=EwrpPkTihCcw0fCP64kgwf5PiJCEKV
       - MYSQL_DATABASE=pokemon_test_db
     healthcheck:
-      test: ["CMD", "mysqladmin", "-uroot", "-pvupX{1UN(:j98$,CY=EV9BD=kqQ1", "ping"]
+      test: ["CMD", "mysqladmin", "-uroot", "-pEwrpPkTihCcw0fCP64kgwf5PiJCEKV", "ping"]
       interval: 30s
       timeout: 10s
       retries: 5
