--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,25 @@ version: '3'
 services:
   app:
     build: .
-    
     ports:
       - "8080:8080"
-    environment:
-      - NODE_ENV=production
-      - DB_HOST=mysql
-      - DB_USER=root
-      - DB_PASS=F{22QjkeBt0Jhu&6j9u-nwXFY8L5Hf
-      - DB_NAME=pokemon_docker
-      - PORT=8080
+    env_file:
+      - .env.prod
     depends_on:
-      mysql:
+      db:
         condition: service_healthy
 
-  mysql:
+  db:
     image: mysql:8.0.0
     ports:
       - "9999:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=F{22QjkeBt0Jhu&6j9u-nwXFY8L5Hf
-      - MYSQL_DATABASE=pokemon_docker
+      - MYSQL_ROOT_PASSWORD=nvazZn0qUcUnPTwwy66K5zZYuk934S
+      - MYSQL_DATABASE=pokemon_db
     volumes:
       - mysql-data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "-uroot", "-pF{22QjkeBt0Jhu&6j9u-nwXFY8L5Hf", "ping"]
+      test: ["CMD", "mysqladmin", "-uroot", "-pnvazZn0qUcUnPTwwy66K5zZYuk934S", "ping"]
       interval: 30s
       timeout: 10s
       retries: 5
