--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NODE_ENV=
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
-PORT=
+NODE_ENV=production
+DB_HOST=db
+DB_USER=root
+DB_PASS=nvazZn0qUcUnPTwwy66K5zZYuk934S
+DB_NAME=pokemon_db
+PORT=8080
